--- a/teste/style.css
+++ b/teste/style.css
@@ -1,17 +1,117 @@
 body {
-    background-color: lightgray;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: auto auto;
-    margin: auto;
-    width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    padding: 20px;
 }
 
-.visualizador {
+.carousel {
+    width: 65vw;
+    height: 750px;
+
+    display: flex;
+    gap: 4vw;                       /* ajustar posição das páginas */
+
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox, Safari 18.2+, Chromium 121+ */
+
+    anchor-name: --carousel;
+}
+
+ul::scroll-button(*) {
+    border: 0;
+    font-size: 2rem;
+    background: none;
+    color: black;
+    opacity: 0.7;
+    cursor: pointer;
+
+    position: absolute;
+    position-anchor: --carousel;
+}
+
+ul::scroll-button(*):hover, ul::scroll-button(*):focus {
+    opacity: 1;
+}
+
+ul::scroll-button(*):active {
+    translate: 1px 1px;
+}
+ul::scroll-button(*):disabled {
+    opacity: 0.2;
+    cursor: unset;
+}
+
+ul::scroll-button(left) {
+    content: "◄";
+    right: calc(anchor(left) - 70px);
+    bottom: calc(anchor(bottom) - 50px);
+}
+ul::scroll-button(right) {
+    content: "►";
+    left: calc(anchor(right) - 70px);
+    bottom: calc(anchor(bottom) - 50px);
+}
+
+
+.carousel-page {
+    list-style-type: none;
+    background-color: #eeeeee;
+    border: 1px solid #dddddd;
+    padding: 18px;                  /* ajustar posição das páginas */
+
+    flex: 0 0 100%;                 /* ajustar tamanho das páginas */
+    scroll-snap-align: center;
+}
+
+.artwork {
+    display: flex;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 5px;
+
+    background-color: #dddddda5;
+}
+
+#work-01 {
+    background-image: url("https://www.letshotels.com.br/wp-content/uploads/2019/06/Beijodromo.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#work-02 {
+    background-image: url("https://fundar.org.br/wp-content/uploads/2021/03/memorial5.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#work-03 {
+    background-image: url("https://fundar.org.br/wp-content/uploads/2021/03/memorial6.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+model-viewer {
+    /* background-color: #dddddd; */
+    height: 280px;
+    width: 280px;
+}
+
+.description {
+    width: 50%;
+}
+
+/* 
+.viewer {
     height: 250px;
     width: 250px;
     border: 1px;
@@ -21,10 +121,11 @@ body {
     background-color: rgb(145, 145, 145);
 }
 
-.descricao {
-    /* height: 200px; */
+.description {
+    height: 200px;
     margin: auto;
     text-align: center;
     justify-content: center;
     align-items: center;
 }
+*/
